dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sampleapp
  labels:
    app: sampleapp
  namespace: test-app-dev
spec:
  ports:
   - port: 80
     name: http
     targetPort: 8080
  selector:
   app: sampleapp
